feat: add username for sign up response
